kubernetes/invidious-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious-db
  namespace: invidious
spec:
  clusterIP: None
  selector:
    app: invidious-db
  ports:
    - port: 5432
      name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: invidious-db
  namespace: invidious
  labels:
    app: invidious-db
spec:
  serviceName: invidious-db
  replicas: 1
  selector:
    matchLabels:
      app: invidious-db
  template:
    metadata:
      labels:
        app: invidious-db
    spec:
      containers:
        - name: invidious-db
          image: docker.io/library/postgres:14
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgresdata
              mountPath: /var/lib/postgresql/data
            - name: sql-config
              mountPath: /config/sql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init-invidious-db.sh
              subPath: init-invidious-db.sh
      volumes:
        - name: sql-config
          configMap:
            name: sql-config
        - name: init-script
          configMap:
            name: init-script
            defaultMode: 0755  # Make script executable
  volumeClaimTemplates:
    - metadata:
        name: postgresdata
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
